crates/banshee_parser/src/snapshots/banshee_parser__tests__case_recovery_missing_then.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..42
  SELECT_STMT@0..42
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..36
      SELECT_ITEM@7..36
        CASE_EXPR@7..36
          CASE_KW@7..11 "CASE"
          WHITESPACE@11..12 " "
          CASE_WHEN@12..25
            WHEN_KW@12..16 "WHEN"
            WHITESPACE@16..17 " "
            BINARY_EXPR@17..23
              COLUMN_REF@17..19
                IDENT@17..18 "x"
                WHITESPACE@18..19 " "
              GT@19..20 ">"
              WHITESPACE@20..21 " "
              LITERAL@21..23
                INTEGER@21..22 "0"
                WHITESPACE@22..23 " "
            ERROR@23..25
              IDENT@23..24 "y"
              WHITESPACE@24..25 " "
          ELSE_KW@25..29 "ELSE"
          WHITESPACE@29..30 " "
          CASE_ELSE@30..32
            COLUMN_REF@30..32
              IDENT@30..31 "z"
              WHITESPACE@31..32 " "
          END_KW@32..35 "END"
          WHITESPACE@35..36 " "
    FROM_CLAUSE@36..42
      FROM_KW@36..40 "FROM"
      WHITESPACE@40..41 " "
      TABLE_REF@41..42
        IDENT@41..42 "t"
