crates/banshee_parser/src/snapshots/banshee_parser__tests__coalesce_nullif.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..45
  SELECT_STMT@0..45
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..39
      SELECT_ITEM@7..24
        COALESCE_EXPR@7..24
          COALESCE_KW@7..15 "COALESCE"
          L_PAREN@15..16 "("
          COLUMN_REF@16..17
            IDENT@16..17 "a"
          COMMA@17..18 ","
          WHITESPACE@18..19 " "
          COLUMN_REF@19..20
            IDENT@19..20 "b"
          COMMA@20..21 ","
          WHITESPACE@21..22 " "
          COLUMN_REF@22..23
            IDENT@22..23 "c"
          R_PAREN@23..24 ")"
      COMMA@24..25 ","
      WHITESPACE@25..26 " "
      SELECT_ITEM@26..39
        NULLIF_EXPR@26..39
          NULLIF_KW@26..32 "NULLIF"
          L_PAREN@32..33 "("
          COLUMN_REF@33..34
            IDENT@33..34 "x"
          COMMA@34..35 ","
          WHITESPACE@35..36 " "
          COLUMN_REF@36..37
            IDENT@36..37 "y"
          R_PAREN@37..38 ")"
          WHITESPACE@38..39 " "
    FROM_CLAUSE@39..45
      FROM_KW@39..43 "FROM"
      WHITESPACE@43..44 " "
      TABLE_REF@44..45
        IDENT@44..45 "t"
