crates/banshee_parser/src/snapshots/banshee_parser__tests__complex_expression.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..56
  SELECT_STMT@0..56
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..50
      SELECT_ITEM@7..18
        BINARY_EXPR@7..18
          PAREN_EXPR@7..15
            L_PAREN@7..8 "("
            BINARY_EXPR@8..13
              COLUMN_REF@8..10
                IDENT@8..9 "a"
                WHITESPACE@9..10 " "
              PLUS@10..11 "+"
              WHITESPACE@11..12 " "
              COLUMN_REF@12..13
                IDENT@12..13 "b"
            R_PAREN@13..14 ")"
            WHITESPACE@14..15 " "
          STAR@15..16 "*"
          WHITESPACE@16..17 " "
          COLUMN_REF@17..18
            IDENT@17..18 "c"
      COMMA@18..19 ","
      WHITESPACE@19..20 " "
      SELECT_ITEM@20..50
        CASE_EXPR@20..50
          CASE_KW@20..24 "CASE"
          WHITESPACE@24..25 " "
          CASE_WHEN@25..39
            WHEN_KW@25..29 "WHEN"
            WHITESPACE@29..30 " "
            COLUMN_REF@30..32
              IDENT@30..31 "x"
              WHITESPACE@31..32 " "
            THEN_KW@32..36 "THEN"
            WHITESPACE@36..37 " "
            COLUMN_REF@37..39
              IDENT@37..38 "y"
              WHITESPACE@38..39 " "
          ELSE_KW@39..43 "ELSE"
          WHITESPACE@43..44 " "
          CASE_ELSE@44..46
            COLUMN_REF@44..46
              IDENT@44..45 "z"
              WHITESPACE@45..46 " "
          END_KW@46..49 "END"
          WHITESPACE@49..50 " "
    FROM_CLAUSE@50..56
      FROM_KW@50..54 "FROM"
      WHITESPACE@54..55 " "
      TABLE_REF@55..56
        IDENT@55..56 "t"
